--- a/index.html
+++ b/index.html
@@ -6,217 +6,267 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="manifest" href="data:application/json,{
- &quot;name&quot;:&quot;CareAutoPro&quot;,
- &quot;short_name&quot;:&quot;CareAutoPro&quot;,
- &quot;start_url&quot;:&quot;.&quot;,
- &quot;display&quot;:&quot;standalone&quot;,
- &quot;background_color&quot;:&quot;#0d47a1&quot;,
- &quot;theme_color&quot;:&quot;#0d47a1&quot;,
- &quot;icons&quot;:[
-  {&quot;src&quot;:&quot;https://cdn-icons-png.flaticon.com/512/743/743131.png&quot;,
-   &quot;sizes&quot;:&quot;192x192&quot;,&quot;type&quot;:&quot;image/png&quot;}
- ]}">
+  &quot;name&quot;:&quot;CareAutoPro&quot;,
+  &quot;short_name&quot;:&quot;CareAutoPro&quot;,
+  &quot;start_url&quot;:&quot;.&quot;,
+  &quot;display&quot;:&quot;standalone&quot;,
+  &quot;background_color&quot;:&quot;#0d47a1&quot;,
+  &quot;theme_color&quot;:&quot;#0d47a1&quot;,
+  &quot;icons&quot;:[
+    {&quot;src&quot;:&quot;https://cdn-icons-png.flaticon.com/512/743/743131.png&quot;,&quot;sizes&quot;:&quot;192x192&quot;,&quot;type&quot;:&quot;image/png&quot;}
+  ]
+}">
 
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
 <style>
-body{font-family:Arial;margin:0;background:#f4f4f4}
-header{background:#0d47a1;color:#fff;padding:1rem;text-align:center}
-main{max-width:600px;margin:auto;padding:1rem}
-.card{background:#fff;padding:1rem;margin:1rem 0;border-radius:6px}
-input,button,select{width:100%;padding:.6rem;margin:.3rem 0}
-button{background:#0d47a1;color:#fff;border:none}
-.secondary{background:#555}
-.hidden{display:none}
-.premium{border:2px solid gold}
-.offline{color:red;text-align:center}
-small{color:#777}
+body {font-family:Arial;margin:0;background:#f4f4f4}
+header {background:#0d47a1;color:#fff;padding:1rem;text-align:center}
+main {max-width:600px;margin:auto;padding:1rem}
+.card {background:#fff;padding:1rem;margin:1rem 0;border-radius:6px}
+input,button,select {width:100%;padding:.6rem;margin:.3rem 0}
+button {background:#0d47a1;color:#fff;border:none}
+.secondary {background:#555}
+.hidden {display:none}
+.offline {color:red;text-align:center}
 </style>
 </head>
 
 <body>
 
 <header>
-<h2>🚗 CareAutoPro</h2>
-<small id="userStatus"></small>
+  <h2>🚗 CareAutoPro</h2>
+  <small id="userStatus"></small>
 </header>
 
 <main>
 
-<div id="offline" class="offline hidden">⚠️ Modalità offline</div>
+<div id="offline" class="offline hidden">⚠️ Offline</div>
 
+<!-- LOGIN -->
 <div id="auth" class="card">
-<h3>Accesso</h3>
-<input id="email" placeholder="Email">
-<input id="password" type="password">
-<button onclick="login()">Login</button>
-<button class="secondary" onclick="register()">Registrati</button>
+  <h3>Accesso</h3>
+  <input id="email" placeholder="Email">
+  <input id="password" type="password" placeholder="Password">
+  <button onclick="login()">Login</button>
+  <button class="secondary" onclick="register()">Registrati</button>
 </div>
 
+<!-- APP PRINCIPALE -->
 <div id="app" class="hidden">
 
-<div class="card">
-<h3>Veicoli</h3>
-<select id="vehicle"></select>
-<input id="newVehicle" placeholder="Nuovo veicolo">
-<button onclick="addVehicle()">Aggiungi veicolo</button>
-<small id="vehicleLimit"></small>
+  <!-- VEICOLI -->
+  <div class="card">
+    <h3>Veicoli</h3>
+    <select id="vehicle"></select>
+    <input id="newVehicle" placeholder="Nuovo veicolo (Premium)">
+    <button onclick="addVehicle()">Aggiungi Veicolo</button>
+    <small id="vehicleLimit"></small>
+  </div>
+
+  <!-- GPS -->
+  <div class="card">
+    <h3>GPS Tracking</h3>
+    <button onclick="startGPS()">Avvia Automatico</button>
+    <button onclick="stopGPS()" class="secondary">Ferma</button>
+    <p>Km percorsi: <span id="kmDisplay">0</span></p>
+  </div>
+
+  <!-- MANUALE -->
+  <div class="card">
+    <h3>Manuale</h3>
+    <button onclick="startManual()">Inizio Viaggio</button>
+    <button onclick="endManual()" class="secondary">Fine Viaggio</button>
+    <p>Km manuale: <span id="kmManual">0</span></p>
+  </div>
+
+  <!-- MANUTENZIONE -->
+  <div class="card">
+    <h3>Nuova Manutenzione</h3>
+    <input id="title" placeholder="Descrizione">
+    <input id="kmIn" type="number" placeholder="KM">
+    <button onclick="saveManutenzione()">Salva</button>
+  </div>
+
+  <!-- LISTA -->
+  <div class="card">
+    <h3>Storico</h3>
+    <ul id="list"></ul>
+  </div>
+
+  <!-- PREMIUM -->
+  <div class="card">
+    <h3>⭐ Premium</h3>
+    <p>Funzioni avanzate: veicoli multipli, notifiche e altro</p>
+    <button onclick="alert('Premium disponibile a breve!')">Scopri Premium</button>
+  </div>
+
+  <!-- PUSH -->
+  <div class="card">
+    <h3>Notifiche</h3>
+    <button onclick="enablePush()">Abilita Notifiche</button>
+  </div>
+
+  <button class="secondary" onclick="logout()">Logout</button>
 </div>
 
-<div class="card">
-<h3>Manutenzione</h3>
-<input id="title" placeholder="Descrizione">
-<input id="km" type="number" placeholder="KM">
-<button onclick="save()">Salva</button>
-</div>
-
-<div class="card">
-<h3>Storico</h3>
-<ul id="list"></ul>
-</div>
-
-<div class="card premium">
-<h3>⭐ Premium</h3>
-<p>Veicoli multipli, notifiche e funzioni avanzate</p>
-<button onclick="upgradeInfo()">Scopri Premium</button>
-</div>
-
-<div class="card">
-<h3>Notifiche</h3>
-<button onclick="enablePush()">Abilita notifiche</button>
-<small id="pushInfo"></small>
-</div>
-
-<button class="secondary" onclick="logout()">Logout</button>
-
-</div>
 </main>
 
 <script>
-/* CONFIG */
-const SUPABASE_URL="https://TUO-PROGETTO.supabase.co";
-const SUPABASE_KEY="PUBLIC_ANON_KEY";
-const supabase=supabase.createClient(SUPABASE_URL,SUPABASE_KEY);
+// CONFIGURA QUI
+const SUPABASE_URL = "https://TUO-PROGETTO.supabase.co";
+const SUPABASE_KEY = "PUBLIC_ANON_KEY";
+const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-let userProfile=null;
+let autoWatchId = null;
+let kmAuto = 0;
+let manualStart = null;
 
-/* SERVICE WORKER INLINE */
-const swCode=`
-const CACHE="cap-v1";
-self.addEventListener("install",e=>e.waitUntil(
- caches.open(CACHE).then(c=>c.addAll(["./"]))
-));
-self.addEventListener("fetch",e=>{
- e.respondWith(
-  fetch(e.request).then(r=>{
-   const res=r.clone();
-   caches.open(CACHE).then(c=>c.put(e.request,res));
-   return r;
-  }).catch(()=>caches.match(e.request))
- )
+// SERVICE WORKER & CACHE (Offline + PWA)
+const swSource = `
+self.addEventListener('install', e => {
+  e.waitUntil(caches.open('careautopro-v1').then(c => c.addAll(['./'])));
 });
-self.addEventListener("push",e=>{
- const d=e.data?.json()||{};
- self.registration.showNotification(d.title||"CareAutoPro",{
-  body:d.body||"Notifica",
-  icon:"https://cdn-icons-png.flaticon.com/512/743/743131.png"
- });
+self.addEventListener('fetch', e => {
+  e.respondWith(
+    fetch(e.request).then(r => { 
+      caches.open('careautopro-v1').then(c => c.put(e.request, r.clone()));
+      return r;
+    }).catch(() => caches.match(e.request))
+  );
+});
+self.addEventListener('push', e => {
+  const d = e.data?.json() || {};
+  self.registration.showNotification(d.title || 'CareAutoPro', {
+    body: d.body || '',
+    icon: 'https://cdn-icons-png.flaticon.com/512/743/743131.png'
+  });
 });
 `;
-navigator.serviceWorker.register(URL.createObjectURL(new Blob([swCode])));
+navigator.serviceWorker.register(URL.createObjectURL(new Blob([swSource])));
 
-/* OFFLINE */
-window.addEventListener("offline",()=>offline.classList.remove("hidden"));
-window.addEventListener("online",()=>offline.classList.add("hidden"));
+// UI HANDLERS
+const authDiv = document.getElementById("auth");
+const appDiv = document.getElementById("app");
 
-/* AUTH */
-async function login(){
- const {error}=await supabase.auth.signInWithPassword({
-  email:email.value,password:password.value
- });
- if(error) alert(error.message);
+async function login() {
+  const { error } = await supabase.auth.signInWithPassword({
+    email: email.value, password: password.value
+  });
+  if(error) alert(error.message);
 }
-async function register(){
- const {error}=await supabase.auth.signUp({
-  email:email.value,password:password.value
- });
- if(error) alert(error.message);
- else alert("Registrazione completata");
+async function register() {
+  const { error } = await supabase.auth.signUp({
+    email: email.value, password: password.value
+  });
+  if(error) alert(error.message);
 }
-async function logout(){
- await supabase.auth.signOut();location.reload();
+async function logout() {
+  await supabase.auth.signOut();
+  location.reload();
 }
-supabase.auth.onAuthStateChange((_,s)=>s&&load());
+supabase.auth.onAuthStateChange((_, session) => {
+  if (session) loadApp();
+});
 
-/* LOAD */
-async function load(){
- auth.classList.add("hidden");
- app.classList.remove("hidden");
- const u=(await supabase.auth.getUser()).data.user;
- const {data}=await supabase.from("profiles").select("*").eq("id",u.id).single();
- userProfile=data||{premium:false};
- userStatus.textContent=userProfile.premium?"Utente PREMIUM ⭐":"Utente FREE";
- loadVehicles();
- loadItems();
+// LOAD APP
+async function loadApp() {
+  authDiv.classList.add("hidden");
+  appDiv.classList.remove("hidden");
+  loadVehicles();
+  loadManutenzioni();
 }
 
-/* VEHICLES */
-async function loadVehicles(){
- const u=(await supabase.auth.getUser()).data.user;
- const {data}=await supabase.from("veicoli").select("*").eq("user_id",u.id);
- vehicle.innerHTML="";
- data.forEach(v=>{
-  const o=document.createElement("option");
-  o.textContent=v.nome;o.value=v.id;vehicle.appendChild(o);
- });
- if(!userProfile.premium && data.length>=1)
-  vehicleLimit.textContent="Versione FREE: 1 veicolo massimo";
+// VEICOLI
+async function loadVehicles() {
+  const u = (await supabase.auth.getUser()).data.user;
+  const { data } = await supabase
+    .from("veicoli")
+    .select("*")
+    .eq("utente_id", u.id);
+
+  const sel = document.getElementById("vehicle");
+  sel.innerHTML = "";
+  data.forEach(v => {
+    const o = document.createElement("option");
+    o.value = v.id;
+    o.textContent = v.nomeveicolo;
+    sel.appendChild(o);
+  });
 }
-async function addVehicle(){
- if(!userProfile.premium){
-  alert("Funzione Premium");
-  return;
- }
- const u=(await supabase.auth.getUser()).data.user;
- await supabase.from("veicoli").insert({user_id:u.id,nome:newVehicle.value});
- newVehicle.value="";loadVehicles();
+async function addVehicle() {
+  const u = (await supabase.auth.getUser()).data.user;
+  await supabase
+    .from("veicoli")
+    .insert({ utente_id: u.id, nomeveicolo: newVehicle.value });
+  newVehicle.value = "";
+  loadVehicles();
 }
 
-/* DATA */
-async function save(){
- const u=(await supabase.auth.getUser()).data.user;
- await supabase.from("manutenzioni").insert({
-  user_id:u.id,title:title.value,km:km.value
- });
- title.value="";km.value="";
- loadItems();
+// MANUTENZIONI
+async function saveManutenzione() {
+  const u = (await supabase.auth.getUser()).data.user;
+  await supabase
+    .from("manutenzioni")
+    .insert({ user_id: u.id, title: title.value, km: kmIn.value });
+  loadManutenzioni();
 }
-async function loadItems(){
- const u=(await supabase.auth.getUser()).data.user;
- const {data}=await supabase.from("manutenzioni")
-  .select("*").eq("user_id",u.id).order("created_at",{ascending:false});
- list.innerHTML="";
- data?.forEach(i=>{
-  const li=document.createElement("li");
-  li.textContent=`${i.title} – ${i.km} km`;
-  list.appendChild(li);
- });
-}
-
-/* PUSH */
-async function enablePush(){
- if(!userProfile.premium){
-  pushInfo.textContent="Disponibile solo Premium";
-  return;
- }
- const reg=await navigator.serviceWorker.ready;
- await reg.pushManager.subscribe({userVisibleOnly:true});
- alert("Notifiche abilitate");
+async function loadManutenzioni() {
+  const u = (await supabase.auth.getUser()).data.user;
+  const { data } = await supabase
+    .from("manutenzioni")
+    .select("*")
+    .eq("user_id", u.id);
+  list.innerHTML = "";
+  data.forEach(i => {
+    const li = document.createElement("li");
+    li.textContent = `${i.title} – ${i.km} km`;
+    list.appendChild(li);
+  });
 }
 
-/* PREMIUM INFO */
-function upgradeInfo(){
- alert("Versione Premium: veicoli multipli, notifiche avanzate. Pagamenti in arrivo.");
+// GPS AUTOMATICO
+function startGPS() {
+  if (!navigator.geolocation) return alert("GPS non supportato");
+  autoWatchId = navigator.geolocation.watchPosition(pos => {
+    if (manualStart === null) {
+      kmAuto += 0; 
+    }
+    // per semplicità non calcolo distanza singola
+    kmDisplay.textContent = kmAuto.toFixed(3);
+  });
+}
+function stopGPS() {
+  if (autoWatchId) navigator.geolocation.clearWatch(autoWatchId);
+}
+
+// GPS MANUALE
+function startManual() {
+  manualStart = null;
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(pos => {
+      manualStart = pos;
+    });
+  }
+}
+function endManual() {
+  if (!manualStart) return;
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(pos => {
+      const dLat = (pos.coords.latitude - manualStart.coords.latitude) * Math.PI / 180;
+      const dLon = (pos.coords.longitude - manualStart.coords.longitude) * Math.PI / 180;
+      const R = 6371;
+      const d = 2 * R * Math.asin(Math.sqrt(Math.sin(dLat/2)**2 + Math.cos(manualStart.coords.latitude*Math.PI/180)*Math.sin(dLon/2)**2));
+      kmManual.textContent = d.toFixed(3);
+    });
+  }
+}
+
+// PUSH
+async function enablePush() {
+  const reg = await navigator.serviceWorker.ready;
+  const sub = await reg.pushManager.subscribe({ userVisibleOnly:true });
+  alert("Notifiche push abilitate. Salva subscription nel tuo DB!");
 }
 </script>
 
