Add root div and script for main.tsx
Add root div and main script to index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ button {background:#0d47a1;color:#fff;border:none}
 <main>
 
 <div id="offline" class="offline hidden">⚠️ Offline</div>
-
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
 <!-- LOGIN -->
 <div id="auth" class="card">
   <h3>Accesso</h3>
