--- a/index.html
+++ b/index.html
@@ -2,39 +2,14 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-
-    <title>CareAutoPro</title>
-
-    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- PWA base -->
-    <meta name="theme-color" content="#1e293b" />
-    <link rel="manifest" href="/manifest.json" />
-
-    <!-- iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-
-    <!-- Font semplice stile PDF -->
-    <style>
-      body {
-        margin: 0;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Helvetica, Arial, sans-serif;
-        background-color: #f8fafc;
-      }
-
-      button {
-        padding: 10px;
-        border: none;
-        border-radius: 6px;
-        background: #2563eb;
-        color: white;
-        font-size: 16px;
-      }
-
-      input {
+    <title>CareAutoPro</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>      input {
         padding: 10px;
         border-radius: 6px;
         border: 1px solid #cbd5e1;
