--- a/index.html
+++ b/index.html
@@ -4,37 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CareAutoPro</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>      input {
+
+    <!-- PWA -->
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" content="#0f172a" />
+
+    <style>
+      body {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+        background: #f8fafc;
+        color: #0f172a;
+      }
+
+      input, select {
         padding: 10px;
         border-radius: 6px;
         border: 1px solid #cbd5e1;
         width: 100%;
         max-width: 300px;
+        font-size: 16px;
       }
 
-      select {
-        padding: 10px;
+      button {
+        padding: 10px 16px;
         border-radius: 6px;
+        border: none;
+        background: #0f172a;
+        color: white;
+        font-size: 16px;
+        cursor: pointer;
       }
 
       hr {
         border: none;
         border-top: 1px solid #e5e7eb;
         width: 100%;
+        margin: 24px 0;
       }
     </style>
   </head>
 
   <body>
-    <!-- ROOT REACT -->
     <div id="root"></div>
 
-    <!-- ENTRY VITE -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
