--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
