--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Titolo -->
     <title>CareAutoPro</title>
+
+    <!-- PWA -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#0d6efd" />
+
+    <!-- Icona -->
+    <link rel="icon" type="image/png" href="/icons/icon-192.png" />
   </head>
+
   <body>
     <div id="root"></div>
 
-    <!-- QUESTO È OBBLIGATORIO -->
+    <!-- AVVIO APP REACT (OBBLIGATORIO) -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
