fix: FORCE mobile bottom nav + cache bust

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Icona -->
     <link rel="icon" type="image/png" href="/icons/icon-192.png" />
-  </head>
+  <meta name="careautopro-build" content="1769188842"></head>
 
   <body>
     <div id="root"></div>
